# anacapa

./: .gitignore  .tmp.swp  ARCHITECTURE.md  CMakeLists.txt  CMakePresets.json  README.md  cornell_box.exr  out.exr
.claude/: settings.json
cmake/: compiler_options.cmake  deps.cmake
images/: albedo_r.exr  test.exr
include/anacapa/accel/: CurvePool.h  GeometryPool.h  IAccelerationStructure.h
include/anacapa/core/: Allocator.h  Types.h
include/anacapa/film/: Film.h
include/anacapa/gpu/: IBackend.h
include/anacapa/integrator/: IIntegrator.h  MISWeight.h  PathVertex.h
include/anacapa/sampling/: ISampler.h
include/anacapa/scene/: SceneLoader.h
include/anacapa/shading/: ILight.h  IMaterial.h  ShadingContext.h
memory/: project_anacapa.md
scenes/: cornell_box.usda  cornell_box_motion.usda  kitchen_set_materials.usda
src/: main.cpp
src/accel/: BVHBackend.cpp  BVHBackend.h  CurveBrute.cpp  CurveBrute.h
src/film/: Film.cpp
src/gpu/cuda/: CMakeLists.txt  CudaAccelStructure.cu  CudaAccelStructure.h  CudaBuffer.h  CudaContext.cu  CudaContext.h  CudaPathIntegrator.cu  CudaPathIntegrator.h
src/gpu/cuda/shaders/: LaunchParams.h  Shade.cu  SharedTypes.h
src/gpu/metal/: CMakeLists.txt  MetalAccelStructure.h  MetalAccelStructure.mm  MetalBuffer.h  MetalBuffer.mm  MetalContext.h  MetalContext.mm  MetalPathIntegrator.h  MetalPathIntegrator.mm
src/gpu/metal/shaders/: RayGen.metal  Shade.metal  SharedTypes.h
src/integrator/: BDPTIntegrator.cpp  BDPTIntegrator.h  LightSampler.h  MISWeight.cpp  PathIntegrator.cpp  PathIntegrator.h  ShadowRay.h
src/render/: RenderSession.cpp  RenderSession.h  ThreadPool.h
src/sampling/: HaltonSampler.h  PCGRng.h
src/scene/alembic/: AlembicLoader.cpp  AlembicLoader.h
src/scene/usd/: USDLoader.cpp  USDLoader.h
src/shading/: Lambertian.h  MarschnerHair.h  OslMaterial.cpp  OslMaterial.h  StandardSurface.h  Texture.cpp  Texture.h  _mx_stdlib.h
src/shading/lights/: AreaLight.h  DirectionalLight.h  DomeLight.cpp  DomeLight.h
src/tools/: denoise.cpp  hair_export.cpp  viewer.cpp
tests/: CMakeLists.txt
tests/unit/: test_allocator.cpp  test_bdpt.cpp  test_bvh.cpp  test_phase4.cpp  test_sampler.cpp  test_types.cpp
tools/: blender_prep_for_usd_export.py
tools/anacapa_renderer/: __init__.py  engine.py  export.py  operators.py  properties.py  ui.py
